--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,10 @@ body {
   color: black;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin: 0;
+  background-image: url('https://images.squarespace-cdn.com/content/v1/6181ba9106c6fc4277f2d75c/3ee665a0-2748-48c8-9d97-ff888c18844b/shadowtrackers-webbackground-dark.jpg');
+  background-repeat: no-repeat;
+  background-attachment:fixed;
+  background-size: 100%;
 }
 
 
@@ -29,4 +33,97 @@ body {
   color: inherit;
   text-decoration: none;
   font-size: 1.5rem;
+}
+
+#project-page {
+  text-align: center;
+}
+
+#project-catalog {
+  list-style: none;
+  text-align: center;
+  padding: 10px;
+
+}
+
+#project-catalog li {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  background-color: #e0e0e0;
+  margin-left: 10%;
+  margin-right: 10%;
+  border-radius: 10px;
+  border-color: rgb(63, 62, 62);
+  border-style: solid;
+  font-size: larger;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+#project-catalog p {
+  margin: 2px 0;
+}
+#project-headers {
+  font-weight: bold;
+  text-decoration: underline;
+}
+
+#about-me {
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
+#about-me h1 {
+  text-align: center;
+}
+#container {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+
+#about-me a {
+  font-size: large;
+}
+
+#info-me {
+  display: flex;
+  background-color: #e0e0e0;
+  border-radius: 5px;
+  border-style: solid;
+  border-color: rgb(63, 62, 62);
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  text-align: center;
+  max-height: 200px;
+}
+
+#professional-experience-1 {
+  background-color: #e0e0e0;
+  border-radius: 5px;
+  border-style: solid;
+  border-color: rgb(63, 62, 62);
+  padding: 10px;
+  margin-top: 10px;
+}
+
+#professional-experience-2 {
+  background-color: #e0e0e0;
+  border-radius: 5px;
+  border-style: solid;
+  border-color: rgb(63, 62, 62);
+  padding: 10px;
+  margin-top: 10px;
+}
+
+#professional-experience-3 {
+  background-color: #e0e0e0;
+  border-radius: 5px;
+  border-style: solid;
+  border-color: rgb(63, 62, 62);
+  padding: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
